# rag-eval-lab

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eval_run.example.json  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml  pages.yml
demo/: app.js  index.html
ragevallab/: __init__.py  api.py  benchmark.py  cli.py  data.py  embedder.py  evals.py  pipeline.py  retrieval.py  store.py
scripts/: post_run.py
tests/: test_api.py  test_benchmark.py  test_evals.py  test_ndcg.py  test_pgvector.py  test_pipeline.py  test_retrieval.py
