[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragevallab"
version = "0.1.0"
description = "A dependency-free RAG pipeline with a deterministic evaluation harness that catches hallucinations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Erik Hill", email = "erik.hill0987@gmail.com" }]
keywords = ["rag", "retrieval", "evaluation", "vector-database", "pgvector", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
# The lab core is stdlib-only. These extras enable the "real" backends and the
# optional HTTP service.
openai = ["openai>=1.0"]
pgvector = ["psycopg[binary]>=3.1"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2.5"]
dev = ["pytest>=7", "fastapi>=0.110", "httpx>=0.27", "pydantic>=2.5"]

[project.scripts]
ragevallab = "ragevallab.cli:main"

[project.urls]
Homepage = "https://github.com/egnaro9/rag-eval-lab"

[tool.setuptools]
packages = ["ragevallab"]
